--- a/laboratoare/01-html/index.html
+++ b/laboratoare/01-html/index.html
@@ -6,18 +6,18 @@
 <meta name=description content="TW">
 <meta name=author content="Micu Matei-Marius">
 <link rel=icon href=/tw/images/favicon.png type=image/png>
-<title>01 - HTML :: TW</title><link href=/tw/css/nucleus.css?1646351701 rel=stylesheet>
-<link href=/tw/css/fontawesome-all.min.css?1646351701 rel=stylesheet>
-<link href=/tw/css/hybrid.css?1646351701 rel=stylesheet>
-<link href=/tw/css/featherlight.min.css?1646351701 rel=stylesheet>
-<link href=/tw/css/perfect-scrollbar.min.css?1646351701 rel=stylesheet>
-<link href=/tw/css/auto-complete.css?1646351701 rel=stylesheet>
-<link href=/tw/css/atom-one-dark-reasonable.css?1646351701 rel=stylesheet>
-<link href=/tw/css/theme.css?1646351701 rel=stylesheet>
-<link href=/tw/css/tabs.css?1646351701 rel=stylesheet>
-<link href=/tw/css/hugo-theme.css?1646351701 rel=stylesheet>
-<link href=/tw/css/theme-blue.css?1646351701 rel=stylesheet>
-<script src=/tw/js/jquery-3.3.1.min.js?1646351701></script>
+<title>01 - HTML :: TW</title><link href=/tw/css/nucleus.css?1646434501 rel=stylesheet>
+<link href=/tw/css/fontawesome-all.min.css?1646434501 rel=stylesheet>
+<link href=/tw/css/hybrid.css?1646434501 rel=stylesheet>
+<link href=/tw/css/featherlight.min.css?1646434501 rel=stylesheet>
+<link href=/tw/css/perfect-scrollbar.min.css?1646434501 rel=stylesheet>
+<link href=/tw/css/auto-complete.css?1646434501 rel=stylesheet>
+<link href=/tw/css/atom-one-dark-reasonable.css?1646434501 rel=stylesheet>
+<link href=/tw/css/theme.css?1646434501 rel=stylesheet>
+<link href=/tw/css/tabs.css?1646434501 rel=stylesheet>
+<link href=/tw/css/hugo-theme.css?1646434501 rel=stylesheet>
+<link href=/tw/css/theme-blue.css?1646434501 rel=stylesheet>
+<script src=/tw/js/jquery-3.3.1.min.js?1646434501></script>
 <style>:root #header+#content>#left>#rlblock_left{display:none!important}</style></head><body data-url=/tw/laboratoare/01-html/>
 <nav id=sidebar class=showVisitedLinks>
 <div id=header-wrapper>
@@ -29,10 +29,10 @@ Tehnologii Web
 <label for=search-by><i class="fas fa-search"></i></label>
 <input data-search-input id=search-by type=search placeholder=Search...>
 <span data-search-clear><i class="fas fa-times"></i></span>
-</div><script type=text/javascript src=/tw/js/lunr.min.js?1646351701></script>
-<script type=text/javascript src=/tw/js/auto-complete.js?1646351701></script>
+</div><script type=text/javascript src=/tw/js/lunr.min.js?1646434501></script>
+<script type=text/javascript src=/tw/js/auto-complete.js?1646434501></script>
 <script type=text/javascript>var baseurl="https://mateimicu.github.io/tw/"</script>
-<script type=text/javascript src=/tw/js/search.js?1646351701></script>
+<script type=text/javascript src=/tw/js/search.js?1646434501></script>
 </div><div class=highlightable>
 <ul class=topics>
 <li data-nav-id=/tw/laboratoare/ title=Laboratoare class="dd-item
@@ -98,7 +98,8 @@ Lista Proiecte
 </div><div id=body-inner>
 <h1>
 01 - HTML
-</h1><p><a href=prezentare_01.pdf>Prezentare Laboratoar</a></p><h3 id=informatii-utile>Informatii Utile</h3><p>Tools:</p><ul>
+</h1><a href=prezentare_mmicu_01.pdf class=highlight>Prezentare Laboratoar</a>
+<h3 id=informatii-utile>Informatii Utile</h3><p>Tools:</p><ul>
 <li><a href=https://jsfiddle.net/>JSFiddle</a></li><li><a href=https://code.visualstudio.com/>VisualStudioCode</a></li></ul><p>Documentatie:</p><ul>
 <li><a href=https://www.w3schools.com/html/>W3schools HTML</a></li><li><a href=https://developer.mozilla.org/en-US/docs/Web/HTML>MDN Web Docs HTML</a></li><li><a href=http://html5doctor.com/element-index>HTML5 Element Index</a></li><li><a href=http://diveinto.html5doctor.com/table-of-contents.html#introduction>Dive Into HTML5</a></li><li><a href=https://github.com/diegocard/awesome-html5#readme>Awesome HTML</a></li><li><a href=https://eager.io/blog/the-history-of-the-url-path-fragment-query-auth/>The History of the URL: Path, Fragment, Query, and Auth</a></li><li><a href=https://validator.w3.org>Validator HTML</a></li></ul><p>Exercitii de antrenament:</p><ul>
 <li><a href=https://www.w3schools.com/html/exercise.asp>W3school Exercises</a></li></ul><h3 id=exercitii>Exercitii</h3><p>Replicati urmatoarele imagini folosing HTML</p><h4 id=1-formular>1. Formular</h4><p><img src=lab_01_exercitiu_form.png alt="Formular in HTML">
@@ -200,16 +201,16 @@ Lista Proiecte
 <a href>Rezolvare</a></p><footer class=footline>
 </footer></div></div><div id=navigation>
 </div></section><div style=left:-1000px;overflow:scroll;position:absolute;top:-1000px;border:none;box-sizing:content-box;height:200px;margin:0;padding:0;width:200px>
-<div style=border:none;box-sizing:content-box;height:200px;margin:0;padding:0;width:200px></div></div><script src=/tw/js/clipboard.min.js?1646351701></script>
-<script src=/tw/js/perfect-scrollbar.min.js?1646351701></script>
-<script src=/tw/js/perfect-scrollbar.jquery.min.js?1646351701></script>
-<script src=/tw/js/jquery.sticky.js?1646351701></script>
-<script src=/tw/js/featherlight.min.js?1646351701></script>
-<script src=/tw/js/highlight.pack.js?1646351701></script>
+<div style=border:none;box-sizing:content-box;height:200px;margin:0;padding:0;width:200px></div></div><script src=/tw/js/clipboard.min.js?1646434501></script>
+<script src=/tw/js/perfect-scrollbar.min.js?1646434501></script>
+<script src=/tw/js/perfect-scrollbar.jquery.min.js?1646434501></script>
+<script src=/tw/js/jquery.sticky.js?1646434501></script>
+<script src=/tw/js/featherlight.min.js?1646434501></script>
+<script src=/tw/js/highlight.pack.js?1646434501></script>
 <script>hljs.initHighlightingOnLoad()</script>
-<script src=/tw/js/modernizr.custom-3.6.0.js?1646351701></script>
-<script src=/tw/js/learn.js?1646351701></script>
-<script src=/tw/js/hugo-learn.js?1646351701></script>
-<script src=/tw/mermaid/mermaid.js?1646351701></script>
+<script src=/tw/js/modernizr.custom-3.6.0.js?1646434501></script>
+<script src=/tw/js/learn.js?1646434501></script>
+<script src=/tw/js/hugo-learn.js?1646434501></script>
+<script src=/tw/mermaid/mermaid.js?1646434501></script>
 <script>mermaid.initialize({startOnLoad:!0})</script>
 </body></html>
