--- a/laboratoare/02_css/index.html
+++ b/laboratoare/02_css/index.html
@@ -6,18 +6,18 @@
 <meta name=description content="TW">
 <meta name=author content="Micu Matei-Marius">
 <link rel=icon href=/tw/images/favicon.png type=image/png>
-<title>02 - CSS :: TW</title><link href=/tw/css/nucleus.css?1646351701 rel=stylesheet>
-<link href=/tw/css/fontawesome-all.min.css?1646351701 rel=stylesheet>
-<link href=/tw/css/hybrid.css?1646351701 rel=stylesheet>
-<link href=/tw/css/featherlight.min.css?1646351701 rel=stylesheet>
-<link href=/tw/css/perfect-scrollbar.min.css?1646351701 rel=stylesheet>
-<link href=/tw/css/auto-complete.css?1646351701 rel=stylesheet>
-<link href=/tw/css/atom-one-dark-reasonable.css?1646351701 rel=stylesheet>
-<link href=/tw/css/theme.css?1646351701 rel=stylesheet>
-<link href=/tw/css/tabs.css?1646351701 rel=stylesheet>
-<link href=/tw/css/hugo-theme.css?1646351701 rel=stylesheet>
-<link href=/tw/css/theme-blue.css?1646351701 rel=stylesheet>
-<script src=/tw/js/jquery-3.3.1.min.js?1646351701></script>
+<title>02 - CSS :: TW</title><link href=/tw/css/nucleus.css?1646434501 rel=stylesheet>
+<link href=/tw/css/fontawesome-all.min.css?1646434501 rel=stylesheet>
+<link href=/tw/css/hybrid.css?1646434501 rel=stylesheet>
+<link href=/tw/css/featherlight.min.css?1646434501 rel=stylesheet>
+<link href=/tw/css/perfect-scrollbar.min.css?1646434501 rel=stylesheet>
+<link href=/tw/css/auto-complete.css?1646434501 rel=stylesheet>
+<link href=/tw/css/atom-one-dark-reasonable.css?1646434501 rel=stylesheet>
+<link href=/tw/css/theme.css?1646434501 rel=stylesheet>
+<link href=/tw/css/tabs.css?1646434501 rel=stylesheet>
+<link href=/tw/css/hugo-theme.css?1646434501 rel=stylesheet>
+<link href=/tw/css/theme-blue.css?1646434501 rel=stylesheet>
+<script src=/tw/js/jquery-3.3.1.min.js?1646434501></script>
 <style>:root #header+#content>#left>#rlblock_left{display:none!important}</style></head><body data-url=/tw/laboratoare/02_css/>
 <nav id=sidebar class=showVisitedLinks>
 <div id=header-wrapper>
@@ -29,10 +29,10 @@ Tehnologii Web
 <label for=search-by><i class="fas fa-search"></i></label>
 <input data-search-input id=search-by type=search placeholder=Search...>
 <span data-search-clear><i class="fas fa-times"></i></span>
-</div><script type=text/javascript src=/tw/js/lunr.min.js?1646351701></script>
-<script type=text/javascript src=/tw/js/auto-complete.js?1646351701></script>
+</div><script type=text/javascript src=/tw/js/lunr.min.js?1646434501></script>
+<script type=text/javascript src=/tw/js/auto-complete.js?1646434501></script>
 <script type=text/javascript>var baseurl="https://mateimicu.github.io/tw/"</script>
-<script type=text/javascript src=/tw/js/search.js?1646351701></script>
+<script type=text/javascript src=/tw/js/search.js?1646434501></script>
 </div><div class=highlightable>
 <ul class=topics>
 <li data-nav-id=/tw/laboratoare/ title=Laboratoare class="dd-item
@@ -98,9 +98,10 @@ Lista Proiecte
 </div><div id=body-inner>
 <h1>
 02 - CSS
-</h1><p><a href=prezentare_02.pdf>Prezentare Laboratoar</a></p><p><a href=https://profs.info.uaic.ro/~busaco/teach/courses/web/web-film.html#week2>Prezentarea Curs si informatii utile</a></p><p><a href=https://profs.info.uaic.ro/~busaco/teach/labs/css/>Laboratoar CSS</a></p><h3 id=informatii-utile>Informatii Utile</h3><p>Tools:</p><ul>
-<li><a href=https://jsfiddle.net/>JSFiddle</a></li><li><a href=https://code.visualstudio.com/>VisualStudioCode</a></li></ul><p>Documentatie:</p><ul>
-<li><a href=https://www.w3schools.com/css/>W3schools CSS</a></li><li><a href=https://developer.mozilla.org/en-US/docs/Web/CSS>MDN Web Docs CSS</a></li><li><a href=https://adam-marsden.co.uk/css-cheat-sheet>CSS Cheat Sheet</a></li><li><a href=https://www.freecodecamp.org/news/7-important-tips-for-writing-better-css/>7 Important Tips for Writing Better CSS</a></li><li><a href=http://www.csszengarden.com/>CSS Zen Garden</a></li><li><a href=https://devdocs.io/css/>CSS @ DevDocs</a></li></ul><p>Exercitii de antrenament:</p><h3 id=exercitii>Exercitii</h3><p>Replicati urmatoarele imagini folosing HTML si CSS</p><h4 id=1-boxmodel>1. BoxModel</h4><p><img src=01_containere.png alt="Exemplu CSS pentru containere">
+</h1><p><a href=https://profs.info.uaic.ro/~busaco/teach/labs/css/>Laboratoar CSS</a></p><p><a href=https://profs.info.uaic.ro/~busaco/teach/courses/web/web-film.html#week2>Prezentarea Curs si informatii utile</a></p><h3 id=informatii-utile>Informatii Utile</h3><p>Tools:</p><ul>
+<li><a href=https://jsfiddle.net/>JSFiddle</a></li><li><a href=https://code.visualstudio.com/>VisualStudioCode</a></li><li><a href=https://validator.w3.org/>HTML Validator</a></li><li><a href=https://jigsaw.w3.org/css-validator/>CSS Validator</a></li><li></li></ul><p>Documentatie:</p><ul>
+<li><a href=https://www.w3schools.com/css/>W3schools CSS</a></li><li><a href=https://developer.mozilla.org/en-US/docs/Web/CSS>MDN Web Docs CSS</a></li><li><a href=https://adam-marsden.co.uk/css-cheat-sheet>CSS Cheat Sheet</a></li><li><a href=https://www.freecodecamp.org/news/7-important-tips-for-writing-better-css/>7 Important Tips for Writing Better CSS</a></li><li><a href=http://www.csszengarden.com/>CSS Zen Garden</a></li><li><a href=https://devdocs.io/css/>CSS @ DevDocs</a></li></ul><p>Exercitii de antrenament:</p><ul>
+<li><a href=https://www.w3schools.com/css/exercise.asp>CSS Exercitii</a></li><li><a href=https://flukeout.github.io/>CSS Diner</a></li></ul><h3 id=exercitii>Exercitii</h3><p>Replicati urmatoarele imagini folosing HTML si CSS</p><h4 id=1-boxmodel>1. BoxModel</h4><p><img src=01_containere.png alt="Exemplu CSS pentru containere">
 <a href>Rezolvare</a></p><h4 id=2-selectia-elementelor>2. Selectia elementelor</h4><p><img src=02_selectors.png alt="Tabel in HTML">
 <a href>Rezolvare</a></p><h4 id=3-sah>3. Sah</h4><p>Aici puteti tabele sau div-uri pentru rezolvare
 <img src=03_sah.png alt="Tabla de sah"></p><p><a href>Rezolvare folosind tabele</a></p><p><a href>Rezolvare folosind div</a></p><h4 id=4-design-responsive>4. Design Responsive</h4><p>Dimensiuni ecran:</p><ul>
@@ -110,16 +111,16 @@ Lista Proiecte
 <img src=04_responsive.gif alt="Exemplu Gif"></p><p><a href>Rezolvare</a></p><footer class=footline>
 </footer></div></div><div id=navigation>
 </div></section><div style=left:-1000px;overflow:scroll;position:absolute;top:-1000px;border:none;box-sizing:content-box;height:200px;margin:0;padding:0;width:200px>
-<div style=border:none;box-sizing:content-box;height:200px;margin:0;padding:0;width:200px></div></div><script src=/tw/js/clipboard.min.js?1646351701></script>
-<script src=/tw/js/perfect-scrollbar.min.js?1646351701></script>
-<script src=/tw/js/perfect-scrollbar.jquery.min.js?1646351701></script>
-<script src=/tw/js/jquery.sticky.js?1646351701></script>
-<script src=/tw/js/featherlight.min.js?1646351701></script>
-<script src=/tw/js/highlight.pack.js?1646351701></script>
+<div style=border:none;box-sizing:content-box;height:200px;margin:0;padding:0;width:200px></div></div><script src=/tw/js/clipboard.min.js?1646434501></script>
+<script src=/tw/js/perfect-scrollbar.min.js?1646434501></script>
+<script src=/tw/js/perfect-scrollbar.jquery.min.js?1646434501></script>
+<script src=/tw/js/jquery.sticky.js?1646434501></script>
+<script src=/tw/js/featherlight.min.js?1646434501></script>
+<script src=/tw/js/highlight.pack.js?1646434501></script>
 <script>hljs.initHighlightingOnLoad()</script>
-<script src=/tw/js/modernizr.custom-3.6.0.js?1646351701></script>
-<script src=/tw/js/learn.js?1646351701></script>
-<script src=/tw/js/hugo-learn.js?1646351701></script>
-<script src=/tw/mermaid/mermaid.js?1646351701></script>
+<script src=/tw/js/modernizr.custom-3.6.0.js?1646434501></script>
+<script src=/tw/js/learn.js?1646434501></script>
+<script src=/tw/js/hugo-learn.js?1646434501></script>
+<script src=/tw/mermaid/mermaid.js?1646434501></script>
 <script>mermaid.initialize({startOnLoad:!0})</script>
 </body></html>
