--- a/laboratoare/02_css/index.html
+++ b/laboratoare/02_css/index.html
@@ -1,8 +1,8 @@
-<!doctype html><html lang=en class="js csstransforms3d"><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><meta name=generator content="Hugo 0.95.0"><meta name=description content="TW"><meta name=author content="Micu Matei-Marius"><link rel=icon href=/tw/images/favicon.png type=image/png><title>02 - CSS :: TW</title><link href=/tw/css/nucleus.css?1648159068 rel=stylesheet><link href=/tw/css/fontawesome-all.min.css?1648159068 rel=stylesheet><link href=/tw/css/hybrid.css?1648159068 rel=stylesheet><link href=/tw/css/featherlight.min.css?1648159068 rel=stylesheet><link href=/tw/css/perfect-scrollbar.min.css?1648159068 rel=stylesheet><link href=/tw/css/auto-complete.css?1648159068 rel=stylesheet><link href=/tw/css/atom-one-dark-reasonable.css?1648159068 rel=stylesheet><link href=/tw/css/theme.css?1648159068 rel=stylesheet><link href=/tw/css/tabs.css?1648159068 rel=stylesheet><link href=/tw/css/hugo-theme.css?1648159068 rel=stylesheet><link href=/tw/css/theme-blue.css?1648159068 rel=stylesheet><script src=/tw/js/jquery-3.3.1.min.js?1648159068></script><style>:root #header+#content>#left>#rlblock_left{display:none!important}</style></head><body data-url=/tw/laboratoare/02_css/><nav id=sidebar class=showVisitedLinks><div id=header-wrapper><div id=header><a href>Tehnologii Web</a></div><div class=searchbox><label for=search-by><i class="fas fa-search"></i></label>
+<!doctype html><html lang=en class="js csstransforms3d"><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><meta name=generator content="Hugo 0.96.0"><meta name=description content="TW"><meta name=author content="Micu Matei-Marius"><link rel=icon href=/tw/images/favicon.png type=image/png><title>02 - CSS :: TW</title><link href=/tw/css/nucleus.css?1648648001 rel=stylesheet><link href=/tw/css/fontawesome-all.min.css?1648648001 rel=stylesheet><link href=/tw/css/hybrid.css?1648648001 rel=stylesheet><link href=/tw/css/featherlight.min.css?1648648001 rel=stylesheet><link href=/tw/css/perfect-scrollbar.min.css?1648648001 rel=stylesheet><link href=/tw/css/auto-complete.css?1648648001 rel=stylesheet><link href=/tw/css/atom-one-dark-reasonable.css?1648648001 rel=stylesheet><link href=/tw/css/theme.css?1648648001 rel=stylesheet><link href=/tw/css/tabs.css?1648648001 rel=stylesheet><link href=/tw/css/hugo-theme.css?1648648001 rel=stylesheet><link href=/tw/css/theme-blue.css?1648648001 rel=stylesheet><script src=/tw/js/jquery-3.3.1.min.js?1648648001></script><style>:root #header+#content>#left>#rlblock_left{display:none!important}</style></head><body data-url=/tw/laboratoare/02_css/><nav id=sidebar class=showVisitedLinks><div id=header-wrapper><div id=header><a href>Tehnologii Web</a></div><div class=searchbox><label for=search-by><i class="fas fa-search"></i></label>
 <input data-search-input id=search-by type=search placeholder=Search...>
-<span data-search-clear><i class="fas fa-times"></i></span></div><script type=text/javascript src=/tw/js/lunr.min.js?1648159068></script>
-<script type=text/javascript src=/tw/js/auto-complete.js?1648159068></script>
-<script type=text/javascript>var baseurl="https://mateimicu.github.io/tw/"</script><script type=text/javascript src=/tw/js/search.js?1648159068></script></div><div class=highlightable><ul class=topics><li data-nav-id=/tw/laboratoare/ title=Laboratoare class="dd-item
+<span data-search-clear><i class="fas fa-times"></i></span></div><script type=text/javascript src=/tw/js/lunr.min.js?1648648001></script>
+<script type=text/javascript src=/tw/js/auto-complete.js?1648648001></script>
+<script type=text/javascript>var baseurl="https://mateimicu.github.io/tw/"</script><script type=text/javascript src=/tw/js/search.js?1648648001></script></div><div class=highlightable><ul class=topics><li data-nav-id=/tw/laboratoare/ title=Laboratoare class="dd-item
 parent"><a href=/tw/laboratoare/>Laboratoare
 <i class="fas fa-check read-icon"></i></a><ul><li data-nav-id=/tw/laboratoare/01-html/ title="01 - HTML" class=dd-item><a href=/tw/laboratoare/01-html/>01 - HTML
 <i class="fas fa-check read-icon"></i></a></li><li data-nav-id=/tw/laboratoare/02_css/ title="02 - CSS" class="dd-item
@@ -12,7 +12,8 @@ active"><a href=/tw/laboratoare/02_css/>02 - CSS
 <i class="fas fa-check read-icon"></i></a></li><li data-nav-id=/tw/laboratoare/04_recapitulare_proiecte/ title="04 - CSS, Responsive Design, Animations, HTTP" class=dd-item><a href=/tw/laboratoare/04_recapitulare_proiecte/>04 - CSS, Responsive Design, Animations, HTTP
 <i class="fas fa-check read-icon"></i></a></li><li data-nav-id=/tw/laboratoare/05_php/ title="05 - PHP" class=dd-item><a href=/tw/laboratoare/05_php/>05 - PHP
 <i class="fas fa-check read-icon"></i></a></li></ul></li><li data-nav-id=/tw/proiecte/ title=Proiecte class=dd-item><a href=/tw/proiecte/>Proiecte
-<i class="fas fa-check read-icon"></i></a><ul><li data-nav-id=/tw/proiecte/lista-proiecte/ title="Lista Proiecte" class=dd-item><a href=/tw/proiecte/lista-proiecte/>Lista Proiecte
+<i class="fas fa-check read-icon"></i></a><ul><li data-nav-id=/tw/proiecte/evaluare/ title="Evaluare: Cerinte + Calendar" class=dd-item><a href=/tw/proiecte/evaluare/>Evaluare: Cerinte + Calendar
+<i class="fas fa-check read-icon"></i></a></li><li data-nav-id=/tw/proiecte/lista-proiecte/ title="Lista Proiecte" class=dd-item><a href=/tw/proiecte/lista-proiecte/>Lista Proiecte
 <i class="fas fa-check read-icon"></i></a></li></ul></li></ul><section id=prefooter><hr><ul><li><a class=padding href=# data-clear-history-toggle><i class="fas fa-history fa-fw"></i> Clear History</a></li></ul></section><section id=footer></section></div></nav><section id=body><div id=overlay></div><div class="padding highlightable"><div><div id=top-bar><div id=top-github-link><a class=github-link title="Edit this page" href=https://github.com/mateimicu/tw/tree/main/content/laboratoare/02_css/_index.md target=blank><i class="fas fa-code-branch"></i>
 <span id=top-github-link-text>Edit this page</span></a></div><div id=breadcrumbs itemscope itemtype=http://data-vocabulary.org/Breadcrumb><span id=sidebar-toggle-span><a href=# id=sidebar-toggle data-sidebar-toggle><i class="fas fa-bars"></i></a></span>
 <span id=toc-menu><i class="fas fa-list-alt"></i></span>
@@ -22,14 +23,14 @@ active"><a href=/tw/laboratoare/02_css/>02 - CSS
 <img src=03_sah.png alt="Tabla de sah"></p><p><a href=https://jsfiddle.net/StefanG/Lrywe3vo/>Rezolvare folosind tabele</a></p><p><a href=https://jsfiddle.net/StefanG/3609rpvc/>Rezolvare folosind div</a></p><h4 id=4-design-responsive>4. Design Responsive</h4><p>Dimensiuni ecran:</p><ul><li><code>360</code></li><li><code>480</code></li><li><code>760</code></li></ul><p><img src=04_small.png alt="Exemplu responsibe mic">
 <img src=04_mid.png alt="Exemplu responsibe mediu">
 <img src=04_max.png alt="Exemplu responsibe mare">
-<img src=04_responsive.gif alt="Exemplu Gif"></p><p><a href>Rezolvare</a></p><footer class=footline></footer></div></div><div id=navigation></div></section><div style=left:-1000px;overflow:scroll;position:absolute;top:-1000px;border:none;box-sizing:content-box;height:200px;margin:0;padding:0;width:200px><div style=border:none;box-sizing:content-box;height:200px;margin:0;padding:0;width:200px></div></div><script src=/tw/js/clipboard.min.js?1648159068></script>
-<script src=/tw/js/perfect-scrollbar.min.js?1648159068></script>
-<script src=/tw/js/perfect-scrollbar.jquery.min.js?1648159068></script>
-<script src=/tw/js/jquery.sticky.js?1648159068></script>
-<script src=/tw/js/featherlight.min.js?1648159068></script>
-<script src=/tw/js/highlight.pack.js?1648159068></script>
-<script>hljs.initHighlightingOnLoad()</script><script src=/tw/js/modernizr.custom-3.6.0.js?1648159068></script>
-<script src=/tw/js/learn.js?1648159068></script>
-<script src=/tw/js/hugo-learn.js?1648159068></script>
-<script src=/tw/mermaid/mermaid.js?1648159068></script>
+<img src=04_responsive.gif alt="Exemplu Gif"></p><p><a href>Rezolvare</a></p><footer class=footline></footer></div></div><div id=navigation></div></section><div style=left:-1000px;overflow:scroll;position:absolute;top:-1000px;border:none;box-sizing:content-box;height:200px;margin:0;padding:0;width:200px><div style=border:none;box-sizing:content-box;height:200px;margin:0;padding:0;width:200px></div></div><script src=/tw/js/clipboard.min.js?1648648001></script>
+<script src=/tw/js/perfect-scrollbar.min.js?1648648001></script>
+<script src=/tw/js/perfect-scrollbar.jquery.min.js?1648648001></script>
+<script src=/tw/js/jquery.sticky.js?1648648001></script>
+<script src=/tw/js/featherlight.min.js?1648648001></script>
+<script src=/tw/js/highlight.pack.js?1648648001></script>
+<script>hljs.initHighlightingOnLoad()</script><script src=/tw/js/modernizr.custom-3.6.0.js?1648648001></script>
+<script src=/tw/js/learn.js?1648648001></script>
+<script src=/tw/js/hugo-learn.js?1648648001></script>
+<script src=/tw/mermaid/mermaid.js?1648648001></script>
 <script>mermaid.initialize({startOnLoad:!0})</script></body></html>
