--- a/laboratoare/05_php/index.html
+++ b/laboratoare/05_php/index.html
@@ -1,8 +1,8 @@
-<!doctype html><html lang=en class="js csstransforms3d"><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><meta name=generator content="Hugo 0.96.0"><meta name=description content="TW"><meta name=author content="Micu Matei-Marius"><link rel=icon href=/tw/images/favicon.png type=image/png><title>05 - PHP :: TW</title><link href=/tw/css/nucleus.css?1648648001 rel=stylesheet><link href=/tw/css/fontawesome-all.min.css?1648648001 rel=stylesheet><link href=/tw/css/hybrid.css?1648648001 rel=stylesheet><link href=/tw/css/featherlight.min.css?1648648001 rel=stylesheet><link href=/tw/css/perfect-scrollbar.min.css?1648648001 rel=stylesheet><link href=/tw/css/auto-complete.css?1648648001 rel=stylesheet><link href=/tw/css/atom-one-dark-reasonable.css?1648648001 rel=stylesheet><link href=/tw/css/theme.css?1648648001 rel=stylesheet><link href=/tw/css/tabs.css?1648648001 rel=stylesheet><link href=/tw/css/hugo-theme.css?1648648001 rel=stylesheet><link href=/tw/css/theme-blue.css?1648648001 rel=stylesheet><script src=/tw/js/jquery-3.3.1.min.js?1648648001></script><style>:root #header+#content>#left>#rlblock_left{display:none!important}</style></head><body data-url=/tw/laboratoare/05_php/><nav id=sidebar class=showVisitedLinks><div id=header-wrapper><div id=header><a href>Tehnologii Web</a></div><div class=searchbox><label for=search-by><i class="fas fa-search"></i></label>
+<!doctype html><html lang=en class="js csstransforms3d"><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><meta name=generator content="Hugo 0.96.0"><meta name=description content="TW"><meta name=author content="Micu Matei-Marius"><link rel=icon href=/tw/images/favicon.png type=image/png><title>05 - PHP :: TW</title><link href=/tw/css/nucleus.css?1648822923 rel=stylesheet><link href=/tw/css/fontawesome-all.min.css?1648822923 rel=stylesheet><link href=/tw/css/hybrid.css?1648822923 rel=stylesheet><link href=/tw/css/featherlight.min.css?1648822923 rel=stylesheet><link href=/tw/css/perfect-scrollbar.min.css?1648822923 rel=stylesheet><link href=/tw/css/auto-complete.css?1648822923 rel=stylesheet><link href=/tw/css/atom-one-dark-reasonable.css?1648822923 rel=stylesheet><link href=/tw/css/theme.css?1648822923 rel=stylesheet><link href=/tw/css/tabs.css?1648822923 rel=stylesheet><link href=/tw/css/hugo-theme.css?1648822923 rel=stylesheet><link href=/tw/css/theme-blue.css?1648822923 rel=stylesheet><script src=/tw/js/jquery-3.3.1.min.js?1648822923></script><style>:root #header+#content>#left>#rlblock_left{display:none!important}</style></head><body data-url=/tw/laboratoare/05_php/><nav id=sidebar class=showVisitedLinks><div id=header-wrapper><div id=header><a href>Tehnologii Web</a></div><div class=searchbox><label for=search-by><i class="fas fa-search"></i></label>
 <input data-search-input id=search-by type=search placeholder=Search...>
-<span data-search-clear><i class="fas fa-times"></i></span></div><script type=text/javascript src=/tw/js/lunr.min.js?1648648001></script>
-<script type=text/javascript src=/tw/js/auto-complete.js?1648648001></script>
-<script type=text/javascript>var baseurl="https://mateimicu.github.io/tw/"</script><script type=text/javascript src=/tw/js/search.js?1648648001></script></div><div class=highlightable><ul class=topics><li data-nav-id=/tw/laboratoare/ title=Laboratoare class="dd-item
+<span data-search-clear><i class="fas fa-times"></i></span></div><script type=text/javascript src=/tw/js/lunr.min.js?1648822923></script>
+<script type=text/javascript src=/tw/js/auto-complete.js?1648822923></script>
+<script type=text/javascript>var baseurl="https://mateimicu.github.io/tw/"</script><script type=text/javascript src=/tw/js/search.js?1648822923></script></div><div class=highlightable><ul class=topics><li data-nav-id=/tw/laboratoare/ title=Laboratoare class="dd-item
 parent"><a href=/tw/laboratoare/>Laboratoare
 <i class="fas fa-check read-icon"></i></a><ul><li data-nav-id=/tw/laboratoare/01-html/ title="01 - HTML" class=dd-item><a href=/tw/laboratoare/01-html/>01 - HTML
 <i class="fas fa-check read-icon"></i></a></li><li data-nav-id=/tw/laboratoare/02_css/ title="02 - CSS" class=dd-item><a href=/tw/laboratoare/02_css/>02 - CSS
@@ -11,6 +11,7 @@ parent"><a href=/tw/laboratoare/>Laboratoare
 <i class="fas fa-check read-icon"></i></a></li><li data-nav-id=/tw/laboratoare/05_php/ title="05 - PHP" class="dd-item
 parent
 active"><a href=/tw/laboratoare/05_php/>05 - PHP
+<i class="fas fa-check read-icon"></i></a></li><li data-nav-id=/tw/laboratoare/06_07_php/ title="06 / 07 - PHP, PDO" class=dd-item><a href=/tw/laboratoare/06_07_php/>06 / 07 - PHP, PDO
 <i class="fas fa-check read-icon"></i></a></li></ul></li><li data-nav-id=/tw/proiecte/ title=Proiecte class=dd-item><a href=/tw/proiecte/>Proiecte
 <i class="fas fa-check read-icon"></i></a><ul><li data-nav-id=/tw/proiecte/evaluare/ title="Evaluare: Cerinte + Calendar" class=dd-item><a href=/tw/proiecte/evaluare/>Evaluare: Cerinte + Calendar
 <i class="fas fa-check read-icon"></i></a></li><li data-nav-id=/tw/proiecte/lista-proiecte/ title="Lista Proiecte" class=dd-item><a href=/tw/proiecte/lista-proiecte/>Lista Proiecte
@@ -59,14 +60,14 @@ Pentru a va ajuta cu proiectele o sa avem o ora de consultatii in saptamana 8, d
 </span></span><span style=display:flex><span>  <span style=color:#75715e>?&gt;</span><span style=color:#960050;background-color:#1e0010>
 </span></span></span><span style=display:flex><span><span style=color:#960050;background-color:#1e0010>&lt;/body&gt;
 </span></span></span><span style=display:flex><span><span style=color:#960050;background-color:#1e0010>&lt;/html&gt;
-</span></span></span></code></pre></div><footer class=footline></footer></div></div><div id=navigation></div></section><div style=left:-1000px;overflow:scroll;position:absolute;top:-1000px;border:none;box-sizing:content-box;height:200px;margin:0;padding:0;width:200px><div style=border:none;box-sizing:content-box;height:200px;margin:0;padding:0;width:200px></div></div><script src=/tw/js/clipboard.min.js?1648648001></script>
-<script src=/tw/js/perfect-scrollbar.min.js?1648648001></script>
-<script src=/tw/js/perfect-scrollbar.jquery.min.js?1648648001></script>
-<script src=/tw/js/jquery.sticky.js?1648648001></script>
-<script src=/tw/js/featherlight.min.js?1648648001></script>
-<script src=/tw/js/highlight.pack.js?1648648001></script>
-<script>hljs.initHighlightingOnLoad()</script><script src=/tw/js/modernizr.custom-3.6.0.js?1648648001></script>
-<script src=/tw/js/learn.js?1648648001></script>
-<script src=/tw/js/hugo-learn.js?1648648001></script>
-<script src=/tw/mermaid/mermaid.js?1648648001></script>
+</span></span></span></code></pre></div><footer class=footline></footer></div></div><div id=navigation></div></section><div style=left:-1000px;overflow:scroll;position:absolute;top:-1000px;border:none;box-sizing:content-box;height:200px;margin:0;padding:0;width:200px><div style=border:none;box-sizing:content-box;height:200px;margin:0;padding:0;width:200px></div></div><script src=/tw/js/clipboard.min.js?1648822923></script>
+<script src=/tw/js/perfect-scrollbar.min.js?1648822923></script>
+<script src=/tw/js/perfect-scrollbar.jquery.min.js?1648822923></script>
+<script src=/tw/js/jquery.sticky.js?1648822923></script>
+<script src=/tw/js/featherlight.min.js?1648822923></script>
+<script src=/tw/js/highlight.pack.js?1648822923></script>
+<script>hljs.initHighlightingOnLoad()</script><script src=/tw/js/modernizr.custom-3.6.0.js?1648822923></script>
+<script src=/tw/js/learn.js?1648822923></script>
+<script src=/tw/js/hugo-learn.js?1648822923></script>
+<script src=/tw/mermaid/mermaid.js?1648822923></script>
 <script>mermaid.initialize({startOnLoad:!0})</script></body></html>
