--- a/laboratoare/01-html/index.html
+++ b/laboratoare/01-html/index.html
@@ -1,8 +1,8 @@
-<!doctype html><html lang=en class="js csstransforms3d"><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><meta name=generator content="Hugo 0.98.0"><meta name=description content="TW"><meta name=author content="Micu Matei-Marius"><link rel=icon href=/tw/images/favicon.png type=image/png><title>01 - HTML :: TW</title><link href=/tw/css/nucleus.css?1651906990 rel=stylesheet><link href=/tw/css/fontawesome-all.min.css?1651906990 rel=stylesheet><link href=/tw/css/hybrid.css?1651906990 rel=stylesheet><link href=/tw/css/featherlight.min.css?1651906990 rel=stylesheet><link href=/tw/css/perfect-scrollbar.min.css?1651906990 rel=stylesheet><link href=/tw/css/auto-complete.css?1651906990 rel=stylesheet><link href=/tw/css/atom-one-dark-reasonable.css?1651906990 rel=stylesheet><link href=/tw/css/theme.css?1651906990 rel=stylesheet><link href=/tw/css/tabs.css?1651906990 rel=stylesheet><link href=/tw/css/hugo-theme.css?1651906990 rel=stylesheet><link href=/tw/css/theme-blue.css?1651906990 rel=stylesheet><script src=/tw/js/jquery-3.3.1.min.js?1651906990></script><style>:root #header+#content>#left>#rlblock_left{display:none!important}</style></head><body data-url=/tw/laboratoare/01-html/><nav id=sidebar class=showVisitedLinks><div id=header-wrapper><div id=header><a href>Tehnologii Web</a></div><div class=searchbox><label for=search-by><i class="fas fa-search"></i></label>
+<!doctype html><html lang=en class="js csstransforms3d"><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><meta name=generator content="Hugo 0.98.0"><meta name=description content="TW"><meta name=author content="Micu Matei-Marius"><link rel=icon href=/tw/images/favicon.png type=image/png><title>01 - HTML :: TW</title><link href=/tw/css/nucleus.css?1652479333 rel=stylesheet><link href=/tw/css/fontawesome-all.min.css?1652479333 rel=stylesheet><link href=/tw/css/hybrid.css?1652479333 rel=stylesheet><link href=/tw/css/featherlight.min.css?1652479333 rel=stylesheet><link href=/tw/css/perfect-scrollbar.min.css?1652479333 rel=stylesheet><link href=/tw/css/auto-complete.css?1652479333 rel=stylesheet><link href=/tw/css/atom-one-dark-reasonable.css?1652479333 rel=stylesheet><link href=/tw/css/theme.css?1652479333 rel=stylesheet><link href=/tw/css/tabs.css?1652479333 rel=stylesheet><link href=/tw/css/hugo-theme.css?1652479333 rel=stylesheet><link href=/tw/css/theme-blue.css?1652479333 rel=stylesheet><script src=/tw/js/jquery-3.3.1.min.js?1652479333></script><style>:root #header+#content>#left>#rlblock_left{display:none!important}</style></head><body data-url=/tw/laboratoare/01-html/><nav id=sidebar class=showVisitedLinks><div id=header-wrapper><div id=header><a href>Tehnologii Web</a></div><div class=searchbox><label for=search-by><i class="fas fa-search"></i></label>
 <input data-search-input id=search-by type=search placeholder=Search...>
-<span data-search-clear><i class="fas fa-times"></i></span></div><script type=text/javascript src=/tw/js/lunr.min.js?1651906990></script>
-<script type=text/javascript src=/tw/js/auto-complete.js?1651906990></script>
-<script type=text/javascript>var baseurl="https://mateimicu.github.io/tw/"</script><script type=text/javascript src=/tw/js/search.js?1651906990></script></div><div class=highlightable><ul class=topics><li data-nav-id=/tw/laboratoare/ title=Laboratoare class="dd-item
+<span data-search-clear><i class="fas fa-times"></i></span></div><script type=text/javascript src=/tw/js/lunr.min.js?1652479333></script>
+<script type=text/javascript src=/tw/js/auto-complete.js?1652479333></script>
+<script type=text/javascript>var baseurl="https://mateimicu.github.io/tw/"</script><script type=text/javascript src=/tw/js/search.js?1652479333></script></div><div class=highlightable><ul class=topics><li data-nav-id=/tw/laboratoare/ title=Laboratoare class="dd-item
 parent"><a href=/tw/laboratoare/>Laboratoare
 <i class="fas fa-check read-icon"></i></a><ul><li data-nav-id=/tw/laboratoare/01-html/ title="01 - HTML" class="dd-item
 parent
@@ -14,6 +14,7 @@ active"><a href=/tw/laboratoare/01-html/>01 - HTML
 <i class="fas fa-check read-icon"></i></a></li><li data-nav-id=/tw/laboratoare/06_07_php/ title="06 / 07 - PHP, PDO" class=dd-item><a href=/tw/laboratoare/06_07_php/>06 / 07 - PHP, PDO
 <i class="fas fa-check read-icon"></i></a></li><li data-nav-id=/tw/laboratoare/09_skip/ title="09 - Paste Fericit" class=dd-item><a href=/tw/laboratoare/09_skip/>09 - Paste Fericit
 <i class="fas fa-check read-icon"></i></a></li><li data-nav-id=/tw/laboratoare/10_dom_js_projects/ title="10 - XML, DOM, JS, Proiecte" class=dd-item><a href=/tw/laboratoare/10_dom_js_projects/>10 - XML, DOM, JS, Proiecte
+<i class="fas fa-check read-icon"></i></a></li><li data-nav-id=/tw/laboratoare/11_rest/ title="11 - REST" class=dd-item><a href=/tw/laboratoare/11_rest/>11 - REST
 <i class="fas fa-check read-icon"></i></a></li></ul></li><li data-nav-id=/tw/proiecte/ title=Proiecte class=dd-item><a href=/tw/proiecte/>Proiecte
 <i class="fas fa-check read-icon"></i></a><ul><li data-nav-id=/tw/proiecte/consultatii/ title="Consultatii proiect" class=dd-item><a href=/tw/proiecte/consultatii/>Consultatii proiect
 <i class="fas fa-check read-icon"></i></a></li><li data-nav-id=/tw/proiecte/evaluare-i/ title="Evaluare - I" class=dd-item><a href=/tw/proiecte/evaluare-i/>Evaluare - I
@@ -118,14 +119,14 @@ active"><a href=/tw/laboratoare/01-html/>01 - HTML
 </span></span><span style=display:flex><span>
 </span></span><span style=display:flex><span>&lt;/<span style=color:#f92672>html</span>&gt;
 </span></span></code></pre></div><h4 id=3-puppy>3. Puppy</h4><p><img src=lab_03_exercitiu_puppy.png alt="Imagine in PHP">
-<a href>Rezolvare</a></p><footer class=footline></footer></div></div><div id=navigation></div></section><div style=left:-1000px;overflow:scroll;position:absolute;top:-1000px;border:none;box-sizing:content-box;height:200px;margin:0;padding:0;width:200px><div style=border:none;box-sizing:content-box;height:200px;margin:0;padding:0;width:200px></div></div><script src=/tw/js/clipboard.min.js?1651906990></script>
-<script src=/tw/js/perfect-scrollbar.min.js?1651906990></script>
-<script src=/tw/js/perfect-scrollbar.jquery.min.js?1651906990></script>
-<script src=/tw/js/jquery.sticky.js?1651906990></script>
-<script src=/tw/js/featherlight.min.js?1651906990></script>
-<script src=/tw/js/highlight.pack.js?1651906990></script>
-<script>hljs.initHighlightingOnLoad()</script><script src=/tw/js/modernizr.custom-3.6.0.js?1651906990></script>
-<script src=/tw/js/learn.js?1651906990></script>
-<script src=/tw/js/hugo-learn.js?1651906990></script>
-<script src=/tw/mermaid/mermaid.js?1651906990></script>
+<a href>Rezolvare</a></p><footer class=footline></footer></div></div><div id=navigation></div></section><div style=left:-1000px;overflow:scroll;position:absolute;top:-1000px;border:none;box-sizing:content-box;height:200px;margin:0;padding:0;width:200px><div style=border:none;box-sizing:content-box;height:200px;margin:0;padding:0;width:200px></div></div><script src=/tw/js/clipboard.min.js?1652479333></script>
+<script src=/tw/js/perfect-scrollbar.min.js?1652479333></script>
+<script src=/tw/js/perfect-scrollbar.jquery.min.js?1652479333></script>
+<script src=/tw/js/jquery.sticky.js?1652479333></script>
+<script src=/tw/js/featherlight.min.js?1652479333></script>
+<script src=/tw/js/highlight.pack.js?1652479333></script>
+<script>hljs.initHighlightingOnLoad()</script><script src=/tw/js/modernizr.custom-3.6.0.js?1652479333></script>
+<script src=/tw/js/learn.js?1652479333></script>
+<script src=/tw/js/hugo-learn.js?1652479333></script>
+<script src=/tw/mermaid/mermaid.js?1652479333></script>
 <script>mermaid.initialize({startOnLoad:!0})</script></body></html>
